--- a/resume.tex
+++ b/resume.tex
@@ -1,10 +1,12 @@
 \documentclass{resume} % Use the custom resume.cls style
 
-\usepackage[left=0.4 in,top=0.4in,right=0.4 in,bottom=0.4in]{geometry} % Document margins
+\usepackage[left=0.4 in,top=0.25 in,right=0.4 in,bottom=0.25in]{geometry} % Document margins
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
-\name{Daniel Chen \hfill} 
-\address{d.chen@live.com \\ 0405 206 287 \\ Perth, WA \\ linkedin.com \\ danielchen.com \\ github.com \hfill}
+
+\name{Daniel Chen}
+\address{d.chen@live.com \\ 0405 206 287 \\ Perth, WA} 
+\address{www.linkedin.com/in/daniel-chen-developer \\ danielchen.com \\ https://github.com/daniel-chen2}
 
 \begin{document}
 	\begin{rSection}{SKILLS}
@@ -23,7 +25,7 @@
 		\begin{itemize} 
 			\item Processed data of 1M+ bank customers to create/modify and maintain 8 dashboards that enabled several key stakeholders to correctly assess the performance of bank credit scorecards and collections systems
 			\item Designed and implemented logic within bank validations software (Angular) that allowed the validations colleague to refer the deal to the fraud team and generate the correct document for both customer and originator. Implemented thorough unit testing to ensure this feature worked as expected.
-			\item Drove 8 architecture decision spaces to derive requirements and provide solutions to senior executives on how to enable 80\% straight through prcessing for a new broker home loan process 
+			\item Drove the discovery behind 8 architecture decisions to derive requirements and provide solutions to senior executives on how to enable 80\% straight through processing (no manual intervention) for a new broker home loan process 
 			\item Developed 3 key learning initiatives for 30+ technology graduates including organising a monthly talk from a senior technology colleague, a central document to describe bankwide techonologies and being a founding member of a software engineering book club
 		\end{itemize}
 		\item \textbf{Intern (Developer)} {Australian Bureau of Statistics} \hfill Nov  2021 - Feb 2021
@@ -36,16 +38,16 @@
 			\item Directed and planned with 20+ committee members to cater to large speaking events that catered to upwards of 700 attendees. This resulted in events with consistently high net promoter scores (up to 92)  
 		\end{itemize}
 	\end{rSection} 
-
+	
 	\begin{rSection}{Projects}
 		\vspace{-1.25em}
 		\item \textbf{TBD Project} {Angular, Java Spring}
 		\item \textbf{Gaming Prices Aggregator Website} {Django (Python), PostgreSQL} 
-		 \begin{itemize} 
-		 	\item Created automated scrape engine which scraped data from 10 gaming websites in under 1 hour and automatically outputted data to a CRUD app with a search feature
-		 \end{itemize}
+		\begin{itemize} 
+			\item Created automated scrape engine which scraped data from 10 gaming websites in under 1 hour and automatically outputted data to a CRUD app with a search feature
+		\end{itemize}
 	\end{rSection} 
-
+	
 	\begin{rSection}{Education}
 		\vspace{-1.25em}
 		\item \textbf{Bsc Computer Science/ Finance UWA} {University of Western Australia} - GPA: 6.1 \hfill 2016 - 2019
