feat: add font awesome

--- a/resume.tex
+++ b/resume.tex
@@ -1,12 +1,16 @@
 \documentclass{resume} % Use the custom resume.cls style
 
+\usepackage{fontawesome}
 \usepackage[left=0.4 in,top=0.25 in,right=0.4 in,bottom=0.25in]{geometry} % Document margins
+
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
-\name{Daniel Chen}
+\name{Daniel Chen }
 \address{d.chen@live.com \\ 0405 206 287 \\ Perth, WA} 
-\address{www.linkedin.com/in/daniel-chen-developer \\ danielchen.com \\ https://github.com/daniel-chen2}
+\address{www.linkedin.com/in/daniel-chen-developer \\ https://github.com/daniel-chen2}
+
+
 
 \begin{document}
 	\begin{rSection}{SKILLS}
@@ -50,8 +54,8 @@
 	
 	\begin{rSection}{Education}
 		\vspace{-1.25em}
-		\item \textbf{Bsc Computer Science/ Finance UWA} {University of Western Australia} - GPA: 6.1 \hfill 2016 - 2019
-		\item \textbf{Graduate Diploma of Cyber Security} {Curtin} - GPA: 7.0 \hfill 2020 - Present
+		\item \textbf{Graduate Diploma of Cyber Security} {Curtin} - GPA: 7.0/7.0 \hfill 2020 - Present
+		\item \textbf{Bsc Computer Science/ Finance UWA} {University of Western Australia} - GPA: 6.1/7.0 \hfill 2016 - 2019
 	\end{rSection} 
 	
 	\begin{rSection}{Referrals} 
