--- a/resume.tex
+++ b/resume.tex
@@ -1,16 +1,18 @@
 \documentclass{resume} % Use the custom resume.cls style
 
-\usepackage{fontawesome}
+\usepackage{fontawesome5}
+
 \usepackage[left=0.4 in,top=0.25 in,right=0.4 in,bottom=0.25in]{geometry} % Document margins
 
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}} 
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
 \name{Daniel Chen }
-\address{d.chen@live.com \\ 0405 206 287 \\ Perth, WA} 
-\address{www.linkedin.com/in/daniel-chen-developer \\ https://github.com/daniel-chen2}
-
-
+\address{
+	\faIcon[regular]{envelope} d.chen@live.com \\ \faIcon[regular]{phone} 0405 206 287 \\ 
+	\faIcon[regular]{location-arrow} Perth, WA} 
+\address{
+	\faIcon[regular]{linkedin} www.linkedin.com/in/daniel-chen-developer \\  \faIcon[regular]{github} https://github.com/daniel-chen2}
 
 \begin{document}
 	\begin{rSection}{SKILLS}
