feature: add referrals to pdf

--- a/resume.tex
+++ b/resume.tex
@@ -62,8 +62,14 @@
 	
 	\begin{rSection}{Referrals} 
 		\vspace{-1.25em}
-		\item \textbf{Michelle Horsham} {Engineering Manager - Bankwest} \hfill Number TBD
+		\item \textbf{Michelle Horsham} {Engineering Manager - Bankwest} 
+			\hfill
+			\faIcon[regular]{envelope} michelle.horsham@bankwest.com.au
+			\faIcon[regular]{phone} Number TBD
 		
-		\item \textbf{Jemie Effendy} {Senior Developer - Bankwest} \hfill Number TBD
+		\item \textbf{Jemie Effendy} {Senior Developer - Bankwest} 
+			\hfill 
+			\faIcon[regular]{envelope} jemie.effendy@bankwest.com.au
+			\faIcon[regular]{phone} 0430 658 901
 	\end{rSection}
 \end{document}
