--- a/resume.tex
+++ b/resume.tex
@@ -10,14 +10,13 @@
 \name{Daniel Chen }
 \address{
 	\faIcon[regular]{envelope} d.chen@live.com \\ \faIcon[regular]{phone} 0405 206 287 \\ 
-	\faIcon[regular]{location-arrow} Perth, WA} 
-\address{
-	\faIcon[regular]{linkedin} www.linkedin.com/in/daniel-chen-developer \\  \faIcon[regular]{github} https://github.com/daniel-chen2}
+	\faIcon[regular]{github} github.com/daniel-chen2
+}
 
 \begin{document}
 	\begin{rSection}{SKILLS}
 		\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-			Languages & Typescript/JavaScript, Java Spring Boot, Python, HTML, CSS, SAS, Oracle SQL \\
+			Languages & Python, Typescript/JavaScript, Java, C\#, HTML, CSS, SAS, Oracle SQL \\
 			Frameworks & Angular, Spring, Django, .NET Framework\\
 			Tools & Git, Jenkins, Jira, Tableau\\
 			Other Skills & Agile, Scrum, Solutions Architecture (6mths)
@@ -30,8 +29,8 @@
 		\item
 		\begin{itemize} 
 			\item Processed data of 1M+ bank customers to create/modify and maintain 8 dashboards that enabled several key stakeholders to correctly assess the performance of bank credit scorecards and collections systems
-			\item Designed and implemented logic within bank validations software (Angular) that allowed the validations colleague to refer the deal to the fraud team and generate the correct document for both customer and originator. Implemented thorough unit testing to ensure this feature worked as expected.
-			\item Drove the discovery behind 8 architecture decisions to derive requirements and provide solutions to senior executives on how to enable 80\% straight through processing (no manual intervention) for a new broker home loan process 
+			\item Designed and implemented logic within bank software (Angular and Java) that allowed the validations colleague to refer the deal to the fraud team and generate the correct document for both customer and originator. Implemented thorough unit testing to ensure this feature worked as expected.
+			\item Drove the discovery behind 8 architecture decisions to derive requirements and provide solutions to senior executives on enabling 80\% straight through processing (no manual intervention) for a new broker home loan process 
 			\item Developed 3 key learning initiatives for 30+ technology graduates including organising a monthly talk from a senior technology colleague, a central document to describe bankwide techonologies and being a founding member of a software engineering book club
 		\end{itemize}
 		\item \textbf{Intern (Developer)} {Australian Bureau of Statistics} \hfill Nov  2021 - Feb 2021
@@ -47,10 +46,10 @@
 	
 	\begin{rSection}{Projects}
 		\vspace{-1.25em}
-		\item \textbf{TBD Project} {Angular, Java Spring}
-		\item \textbf{Gaming Prices Aggregator Website} {Django (Python), PostgreSQL} 
+	
+		\item \textbf{Gaming Prices Aggregator Website} {\hfill \faIcon[regular]{github} https://github.com/daniel-chen2/GamePriceAggregator}  
 		\begin{itemize} 
-			\item Created automated scrape engine which scraped data from 10 gaming websites in under 1 hour and automatically outputted data to a CRUD app with a search feature
+			\item Created automated scrape engine which scraped data from 10 gaming websites in under 1 hour and automatically outputted data to a CRUD app with a search feature (Django, Python, Heroku)
 		\end{itemize}
 	\end{rSection} 
 	
@@ -62,14 +61,8 @@
 	
 	\begin{rSection}{Referrals} 
 		\vspace{-1.25em}
-		\item \textbf{Michelle Horsham} {Engineering Manager - Bankwest} 
-			\hfill
-			\faIcon[regular]{envelope} michelle.horsham@bankwest.com.au
-			\faIcon[regular]{phone} Number TBD
-		
 		\item \textbf{Jemie Effendy} {Senior Developer - Bankwest} 
 			\hfill 
-			\faIcon[regular]{envelope} jemie.effendy@bankwest.com.au
-			\faIcon[regular]{phone} 0430 658 901
+			\faIcon[regular]{phone} 
 	\end{rSection}
 \end{document}
