fix bolding issue

--- a/resume.cls
+++ b/resume.cls
@@ -81,7 +81,7 @@
 % Used to create large resume section
 \newenvironment{rSection}[1]{
   \sectionskip
-  \MakeUppercase{\bf #1}
+  \MakeUppercase{\textbf {#1}}
   \sectionlineskip
   \hrule
   \begin{list}{}{
