--- a/resume.tex
+++ b/resume.tex
@@ -25,20 +25,38 @@
 	
 	\begin{rSection}{Work History}
 		\vspace{-1.25em}
-		\item \textbf{Technology Graduate} {Bankwest} \hfill Feb 2021 - Current
+		\item \textbf{Software Developer (Graduate)} {Bankwest} \hfill Feb 2021 - Current
 		\item
 		\begin{itemize} 
-			\item Processed data of 1M+ bank customers to create/modify and maintain 8 dashboards that enabled several key stakeholders to correctly assess the performance of bank credit scorecards and collections systems
-			\item Designed and implemented logic within bank software (Angular and Java) that allowed the validations colleague to refer the deal to the fraud team and generate the correct document for both customer and originator. Implemented thorough unit testing to ensure this feature worked as expected.
-			\item Drove the discovery behind 8 architecture decisions to derive requirements and provide solutions to senior executives on enabling 80\% straight through processing (no manual intervention) for a new broker home loan process 
-			\item Developed 3 key learning initiatives for 30+ technology graduates including organising a monthly talk from a senior technology colleague, a central document to describe bankwide techonologies and being a founding member of a software engineering book club
+			\item Technical Owner/Lead on two internal tools that tracked the tech health and lead time to change metrics
+for all systems bankwide. This allowed technology executives to easily report on the health of their systems
+through a UI interface. This data was then used to inform bankwide KPIs			
+			\item Designed and implemented logic within our bank validations software that allowed the validations colleague
+to refer a deal to the fraud team and generate the correct document for both customer and originator.
+Implemented thorough unit testing to ensure this feature worked as expected.
+			\item Drove architecture design and governance activities around the migration of core customer data (1M+
+records) away from our legacy core banking system. This enabled the bank to have a strategy to enable
+a transition into a more agile microservices environment
+			\item Developed 3 key learning initiatives for 30+ technology graduates including organising a monthly talk from
+a senior technology colleague, a central document to describe bankwide techonologies and being a founding
+member of a software engineering book club
+			\item Processed data of 1M+ bank customers to create/modify and maintain 8 dashboards that enabled several
+key stakeholders to correctly assess the performance of bank credit scorecards and collections systems
 		\end{itemize}
 		\item \textbf{Intern (Developer)} {Australian Bureau of Statistics} \hfill Nov  2021 - Feb 2021
 		\begin{itemize} 
 			\item Configured Jenkins to enable automated unit testing in for 300+ tests that saved many developer man hours and ensured proper unit test coverage
 			\item Made several bugfixes within internal software including fixing a long standing issue with communication to a roles API
 		\end{itemize}
-		\item \textbf{TEDxUWA} {Head of Events/ Head of Communications} (Volunteer) \hfill Jan 2018 - Oct 2019
+		
+
+		\item \textbf{HPC IT Officer} {DownUnder Geosolutions} \hfill Jan 2018 - Oct 2019
+		\begin{itemize} 
+
+			\item  Diagnosed and repaired networking and performance issues with underperforming High-Performance Computers in the 600+ node machine room
+		\end{itemize}
+
+		\item \textbf{TEDxUWA} {Head of Events/ Head of Communications} (Volunteer) 
 		\begin{itemize} 
 			\item Directed and planned with 20+ committee members to cater to large speaking events that catered to upwards of 700 attendees. This resulted in events with consistently high net promoter scores (up to 92)  
 		\end{itemize}
@@ -46,7 +64,10 @@
 	
 	\begin{rSection}{Projects}
 		\vspace{-1.25em}
-	
+		\item \textbf{Danielchen.tech} {\hfill \faIcon[regular]{globe} https://danielchen.tech/}  
+		\begin{itemize} 
+			\item Personal Blog dedicated to learning best practices of the industry
+		\end{itemize}
 		\item \textbf{Gaming Prices Aggregator Website} {\hfill \faIcon[regular]{github} https://github.com/daniel-chen2/GamePriceAggregator}  
 		\begin{itemize} 
 			\item Created automated scrape engine which scraped data from 10 gaming websites in under 1 hour and automatically outputted data to a CRUD app with a search feature (Django, Python, Heroku)
@@ -55,14 +76,12 @@
 	
 	\begin{rSection}{Education}
 		\vspace{-1.25em}
-		\item \textbf{Graduate Diploma of Cyber Security} {Curtin} - GPA: 7.0/7.0 \hfill 2020 - Present
-		\item \textbf{Bsc Computer Science/ Finance UWA} {University of Western Australia} - GPA: 6.1/7.0 \hfill 2016 - 2019
+		\item \textbf{Graduate Diploma of Cyber Security} {Curtin} - GPA: 7.0/7.0 \hfill Ongoing
+		\item \textbf{Bsc Computer Science/ Finance UWA} {University of Western Australia} - GPA: 6.1/7.0 \hfill 
 	\end{rSection} 
 	
 	\begin{rSection}{Referrals} 
 		\vspace{-1.25em}
-		\item \textbf{Jemie Effendy} {Senior Developer - Bankwest} 
-			\hfill 
-			\faIcon[regular]{phone} 
+		\item Referrals available upon request
 	\end{rSection}
 \end{document}
