Reinstate previous wording

--- a/resume.tex
+++ b/resume.tex
@@ -10,14 +10,15 @@
 \name{Daniel Chen }
 \address{
 	\faIcon[regular]{envelope} d.chen@live.com \\ \faIcon[regular]{phone} 0405 206 287 \\ 
-	\faIcon[regular]{github} github.com/daniel-chen2
+	\faIcon[regular]{github} github.com/daniel-chen2 \\ 
+	\faIcon[regular]{globe} https://danielchen.tech/
 }
 
 \begin{document}
 	\begin{rSection}{SKILLS}
 		\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-			Languages & Python, Typescript/JavaScript, Java, C\#, HTML, CSS, SAS, Oracle SQL \\
-			Frameworks & Angular, Spring, Django, .NET Framework\\
+			Languages & Typescript/JavaScript, Python, Java, C\#, HTML, CSS, Oracle SQL \\
+			Frameworks & Angular, .NET, Django, \\
 			Tools & Git, Jenkins, Jira, Tableau\\
 			Other Skills & Agile, Scrum, Solutions Architecture (6mths)
 		\end{tabular}\\
