--- a/resume.tex
+++ b/resume.tex
@@ -8,38 +8,42 @@
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
 \name{Daniel Chen }
+
 \address{
-	\faIcon[regular]{envelope} d.chen@live.com \\ \faIcon[regular]{phone} 0405 206 287 \\ 
-	\faIcon[regular]{github} github.com/daniel-chen2 \\ 
-	\faIcon[regular]{globe} https://danielchen.tech/
+	\faIcon[regular]{linkedin} linkedin.com/in/daniel-chen-developer \\
+	\faIcon[regular]{github} github.com/daniel-chen2 
+}
+
+\address{
+	\faIcon[regular]{envelope} d.chen@live.com \\ \faIcon[regular]{phone} 0405 206 287 
 }
 
 \begin{document}
 	\begin{rSection}{SKILLS}
 		\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 			Languages & Typescript/JavaScript, Python, Java, C\#, HTML, CSS, Oracle SQL \\
-			Frameworks & Angular, .NET, Django, \\
-			Tools & Git, Jenkins, Jira, Tableau\\
+			Frameworks/ Libraries &  Angular, Apollo GraphQL, Java Spring Boot, .NET, Django \\
+			Tools & Git, Jenkins, Octopus Deploy, TeamCity, Jira, Tableau\\
 			Other Skills & Agile, Scrum, Solutions Architecture (6mths)
 		\end{tabular}\\
 	\end{rSection}
 	
 	\begin{rSection}{Work History}
 		\vspace{-1.25em}
-		\item \textbf{Software Developer (Graduate)} {Bankwest} \hfill Feb 2021 - Current
+		\item \textbf{Software Engineer (Graduate)} {Bankwest} \hfill Feb 2021 - Current
 		\item
 		\begin{itemize} 
-			\item Technical Owner/Lead on two internal tools that tracked the tech health and lead time to change metrics
-for all systems bankwide. This allowed technology executives to easily report on the health of their systems
-through a UI interface. This data was then used to inform bankwide KPIs			
 			\item Designed and implemented logic within our bank validations software that allowed the validations colleague
 to refer a deal to the fraud team and generate the correct document for both customer and originator.
 Implemented thorough unit testing to ensure this feature worked as expected.
 			\item Drove architecture design and governance activities around the migration of core customer data (1M+
 records) away from our legacy core banking system. This enabled the bank to have a strategy to enable
 a transition into a more agile microservices environment
+			\item Technical Owner/Lead on two internal tools that tracked the tech health and lead time to change metrics
+for all systems bankwide. This allowed technology executives to easily report on the health of their systems
+through a UI interface. This data was then used to inform bankwide KPIs			
 			\item Developed 3 key learning initiatives for 30+ technology graduates including organising a monthly talk from
-a senior technology colleague, a central document to describe bankwide techonologies and being a founding
+a senior technology colleague, a central document to describe bankwide technologies and being a founding
 member of a software engineering book club
 			\item Processed data of 1M+ bank customers to create/modify and maintain 8 dashboards that enabled several
 key stakeholders to correctly assess the performance of bank credit scorecards and collections systems
@@ -63,26 +67,32 @@ key stakeholders to correctly assess the performance of bank credit scorecards a
 		\end{itemize}
 	\end{rSection} 
 	
-	\begin{rSection}{Projects}
-		\vspace{-1.25em}
-		\item \textbf{Danielchen.tech} {\hfill \faIcon[regular]{globe} https://danielchen.tech/}  
-		\begin{itemize} 
-			\item Personal Blog dedicated to learning best practices of the industry
-		\end{itemize}
-		\item \textbf{Gaming Prices Aggregator Website} {\hfill \faIcon[regular]{github} https://github.com/daniel-chen2/GamePriceAggregator}  
-		\begin{itemize} 
-			\item Created automated scrape engine which scraped data from 10 gaming websites in under 1 hour and automatically outputted data to a CRUD app with a search feature (Django, Python, Heroku)
-		\end{itemize}
-	\end{rSection} 
-	
 	\begin{rSection}{Education}
 		\vspace{-1.25em}
 		\item \textbf{Graduate Diploma of Cyber Security} {Curtin} - GPA: 7.0/7.0 \hfill Ongoing
 		\item \textbf{Bsc Computer Science/ Finance UWA} {University of Western Australia} - GPA: 6.1/7.0 \hfill 
+		\begin{itemize} 
+			\scriptsize\item \textit{Volunteering Activities: English for Refugees Tutor, UWA Basketball Club Events Manager, WAUC Charity Consultant} \hfill
+		\end{itemize}
 	\end{rSection} 
+
+	% \begin{rSection}{Projects}
+	% 	\vspace{-1.25em}
+	% 	% \item \textbf{Danielchen.tech} {\hfill \faIcon[regular]{globe} https://danielchen.tech/}  
+	% 	% \begin{itemize} 
+	% 	% 	\item Personal Blog dedicated to learning best software practices of the industry.   
+	% 	% \end{itemize}
+	% 	\item \textbf{Gaming Prices Aggregator Website} {\hfill \faIcon[regular]{github} https://github.com/daniel-chen2/GamePriceAggregator}  
+	% 	\begin{itemize} 
+	% 		\item Created automated scrape engine which scraped data from 10 gaming websites in under 1 hour and automatically outputted data to a CRUD app with a search feature (Django, Python, Heroku)
+	% 	\end{itemize}
+	% \end{rSection} 
+	
 	
 	\begin{rSection}{Referrals} 
 		\vspace{-1.25em}
-		\item Referrals available upon request
+		\item \textbf{Jemie Effendy} {Software Engineer - Powerledger} 
+			\hfill 
+			\faIcon[regular]{phone} 0430 658 901
 	\end{rSection}
 \end{document}
