feat: make the diamonds | instead

--- a/resume.tex
+++ b/resume.tex
@@ -11,9 +11,9 @@
 \name{Daniel Chen}
 
 \address{
-	d.chen@live.com \\	
+	d.chen@live.com \\
 	(+61) 405 206 287 \\
-	https://dchen.app \\
+	dchen.app \\
 	linkedin.com/in/daniel-chen-developer
 }
 
@@ -21,9 +21,9 @@
 	\begin{rSection}{SKILLS}
 		\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 			Frameworks/ Libraries &  Angular \& Next.js (Typescript), Spring Boot (Java), Django (Python), Scikit-learn \\
-            Tools & Git, Octopus Deploy, TeamCity (CI/CD), Jira, Figma (Basic)\\
+            Tools & Git, Octopus Deploy, TeamCity (CI/CD), Jira, Cursor (AI IDE)\\
             Other Skills & Agile, Scrum, Solutions Architecture \\ 
-			Certifications & Amazon Associate Developer, Secure Code Warrior Appsec Champion \\
+			Certifications & Amazon Associate Developer, Secure Code Warrior - Appsec Champion \\
 			Spoken Languages & English (Native), Mandarin (Conversational), Cantonese (Conversational) \\
 		\end{tabular}\\
 	\end{rSection}
@@ -32,15 +32,15 @@
 		\vspace{-0.8em}
 		\item \textbf{Software Engineer} {Bankwest / Commonwealth Bank of Australia} \hfill Feb 2021 - Current
 		\begin{itemize} 
-			\item Developed instant "on upload" Naieve Bayes machine learning model that categorised critical bank documents at a rate of up to \textbf{90\%}. This led to a significant decrease in reliance on back-office manual categorisation while maintaining optimal user experience. This achievement led to a subsequent nomination for an individual excellence award.
-			\item Designated as "Stream Lead" on developing Bankwest's first LLM powered broker chat application with a deadline of two months (Fastest greenfield project in Bank History). The role involved interfacing with an external engineering team to align on technical details and architecture, as well as leading the team to consume the streamed LLM output to a Java API and subsequently to an Angular Frontend.
+			\item Developed instant "on-upload" Naive Bayes machine learning model within Java Spring Boot that lifted auto-categorisation recall (true-positive) rates of critical bank documents from 42.7\% up to a rate of 90\%. This led to a significant decrease in reliance on back-office manual categorisation while maintaining optimal user experience. This achievement subsequently resulted in a nomination for a national individual excellence award at my parent company.
+			\item Designated as "Stream Lead" on developing Bankwest's first LLM powered broker chat application with a deadline of two months (fastest greenfield project in bank history). The role involved interfacing with an external engineering team to align on technical details and architecture, as well as leading the team to consume the streamed LLM output to a Java Spring Boot API and subsequently forwarding SSE Events to be consumed by an Angular Frontend.
 			\item Technical Owner on two internal tools that automated the tracking of tech health and lead time to change metrics
 for hundreds of systems bankwide. This allowed technology executives to easily find reporting on the health of their systems
 through a UI interface.		
 			\item Developed 3 key learning initiatives for 30+ technology graduates including organising a monthly talk from
 a senior technology colleague, a central document to describe bankwide technologies and being a founding
 member of a software engineering book club
-			\item \textbf{Awards}: Hack Day Winner (FY1 2024), National Individual Excellence Award Nominee (FY1 2024) 
+			\item \textbf{Awards}: Hack Day Winner (2024), National Individual Excellence Award Nominee (2024) 
 		\end{itemize}
 		
 		\item \textbf{HPC IT Officer} {DownUnder Geosolutions} \hfill Jan 2018 - Oct 2019
@@ -51,15 +51,14 @@ member of a software engineering book club
 
 	\end{rSection} 
 
-	\begin{rSection}{Projects}
+	\begin{rSection}{Projects and Other Work}
 		\vspace{-0.8em}
-		\item \textbf{LLM based Chinese Reading Application} {\hfill \faIcon[regular]{github} TBD URL}  
+		\item \textbf{LLM based Chinese Reading Application} {\hfill \faIcon[regular]{globe} https://language-learning-app-ui-production.up.railway.app/}  
 		\begin{itemize} 
-			\item Developed (Next.js, Django \& Ollama), designed and marketed LLM powered Chinese Language Learning Application based on Stephen Krashen's theory of Comprehensible Input. The app serves hundreds of users weekly.
-			\item Developed Asynchronous LLM request strategy with asyncio and SSE Streaming Solution to be able to serve per word and per sentence Chinese Translations to up to x users at a time
+			\item LLM powered Chinese Language Learning Application (Next.js, React, Python) that generates Chinese text to the user's exact level based on previously known vocabulary.
+			\item Developed real-time asynchronous LLM request strategy with python asyncio to serve per word and per sentence Chinese to english translations at a reasonable response time (20-30s total response time). 
 		\end{itemize}
 	\end{rSection} 
-
 	
 	\begin{rSection}{Education}
 		\vspace{-0.8em}
@@ -71,11 +70,10 @@ member of a software engineering book club
 		\item \textbf{Upper Intermediate Mandarin Course} {Taiwan Language Institute}\hfill 
 	\end{rSection} 
 
-	
 	\begin{rSection}{Referrals} 
 		\vspace{-0.8em}
 		\item \textbf{Ujjwal Sharma} {Staff Engineer (Techjnical Lead) - Bankwest} 
 			\hfill 
-			\faIcon[regular]{phone} 0430 658 901
+			\faIcon[regular]{phone} (+61) 470 396 826
 	\end{rSection}
 \end{document}
