--- a/resume.cls
+++ b/resume.cls
@@ -29,7 +29,7 @@
 \def \name#1{\def\@name{#1}}        % \name command can be used to set name
 \def \@name {}                      % Set \@name to empty by default
 
-\def \addressSep {$\diamond$}         % Set default address seperator
+\def \addressSep {\textbar}         % Set default address seperator
 
 % One or two address lines can be specified 
 \let \@addressone \relax
