feat: add project

--- a/resume.tex
+++ b/resume.tex
@@ -53,9 +53,9 @@ member of a software engineering book club
 
 	\begin{rSection}{Projects and Other Work}
 		\vspace{-0.8em}
-		\item \textbf{LLM based Chinese Reading Application} {\hfill \faIcon[regular]{globe} https://language-learning-app-ui-production.up.railway.app/}  
+		\item \textbf{LLM based Chinese Reading Application} {\hfill \faIcon[regular]{link} https://language-learning-app-ui-production.up.railway.app/}  
 		\begin{itemize} 
-			\item LLM powered Chinese Language Learning Application (Next.js, React, Python) that generates Chinese text to the user's exact level based on previously known vocabulary.
+			\item LLM powered Chinese Language Learning Application (Next.js, React, Python) that generates streamed chinese learning material, pronounciation and translations for the user's exact level based on previously known vocabulary.
 			\item Developed real-time asynchronous LLM request strategy with python asyncio to serve per word and per sentence Chinese to english translations at a reasonable response time (20-30s total response time). 
 		\end{itemize}
 	\end{rSection} 
