--- a/resume.tex
+++ b/resume.tex
@@ -20,32 +20,33 @@
 \begin{document}
 	\begin{rSection}{SKILLS}
 		\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-			Frameworks/ Libraries &  Angular \& Next.js (Typescript), Spring Boot (Java), Django (Python), Scikit-learn \\
-            Tools & Git, Octopus Deploy, TeamCity (CI/CD), Jira, Cursor (AI IDE)\\
-            Other Skills & Agile, Scrum, Solutions Architecture \\ 
+			Programming Languages & Java, Python, TypeScript, SQL \\
+			Frameworks/ Libraries &  Angular \& Next.js, Spring Boot, Django, Scikit-learn \\
+            Tools & Git, Octopus Deploy, Docker, TeamCity (CI/CD), Jira, Cursor (AI IDE), Vim (Shortcuts), PostgreSQL \\
 			Certifications & Amazon Associate Developer, Secure Code Warrior - Appsec Champion \\
 			Spoken Languages & English (Native), Mandarin (Conversational), Cantonese (Conversational) \\
+            Other Skills & Agile, Scrum, Software Design and Architecture, Microservices, TDD \\ 
 		\end{tabular}\\
 	\end{rSection}
 
 	\begin{rSection}{Work History}
 		\vspace{-0.8em}
-		\item \textbf{Software Engineer} {Bankwest / Commonwealth Bank of Australia} \hfill Feb 2021 - Current
+		\item \textbf{Software Engineer} {Bankwest / Commonwealth Bank of Australia} \hfill Feb 2021 - Present
 		\begin{itemize} 
-			\item Developed instant "on-upload" Naive Bayes machine learning model within Java Spring Boot that lifted auto-categorisation recall (true-positive) rates of critical bank documents from 42.7\% up to a rate of 90\%. This led to a significant decrease in reliance on back-office manual categorisation while maintaining optimal user experience. This achievement subsequently resulted in a nomination for a national individual excellence award at my parent company.
-			\item Designated as "Stream Lead" on developing Bankwest's first LLM powered broker chat application with a deadline of two months (fastest greenfield project in bank history). The role involved interfacing with an external engineering team to align on technical details and architecture, as well as leading the team to consume the streamed LLM output to a Java Spring Boot API and subsequently forwarding SSE Events to be consumed by an Angular Frontend.
+			\item Developed instant "on-upload" Naive Bayes machine learning model within Java Spring Boot that lifted auto-categorisation recall (true-positive) rates of critical bank documents from 42.7\% up to a rate of 90\%. This led to a significant decrease in manual categorisation and subsequently resulted in a nomination for a national individual excellence award at my parent company
+			\item "Stream Lead" on developing Bankwest's first LLM powered broker chat application, which was delivered to production in two months (fastest greenfield project in bank history). The role involved technical design and development on the creation of a Java Spring Boot API and an Angular frontend that consumed SSE events from streamed LLM output
 			\item Technical Owner on two internal tools that automated the tracking of tech health and lead time to change metrics
 for hundreds of systems bankwide. This allowed technology executives to easily find reporting on the health of their systems
-through a UI interface.		
-			\item Developed 3 key learning initiatives for 30+ technology graduates including organising a monthly talk from
-a senior technology colleague, a central document to describe bankwide technologies and being a founding
-member of a software engineering book club
+through a UI interface		
+			\item Developed and led multiple learning initiatives for 30+ graduates, including monthly tech talks, knowledge documentation, and a book club
 			\item \textbf{Awards}: Hack Day Winner (2024), National Individual Excellence Award Nominee (2024) 
 		\end{itemize}
-		
+		\item \textbf{Software Engineer (Student)} {Australian Bureau of Statistics} \hfill Nov 2020 - Feb 2021
+		\begin{itemize} 
+			\item Developed CI/CD pipeline in Jenkins for the internal statistics tracking software to run unit and integration tests
+		\end{itemize}
 		\item \textbf{HPC IT Officer} {DownUnder Geosolutions} \hfill Jan 2018 - Oct 2019
 		\begin{itemize} 
-
 			\item  Diagnosed and repaired networking and performance issues with underperforming High-Performance Computers in the 600+ node machine room
 		\end{itemize}
 
@@ -53,10 +54,10 @@ member of a software engineering book club
 
 	\begin{rSection}{Projects and Other Work}
 		\vspace{-0.8em}
-		\item \textbf{LLM based Chinese Reading Application} {\hfill \faIcon[regular]{link} https://language-learning-app-ui-production.up.railway.app/}  
+		\item \textbf{LLM Powered Chinese Reading Application} 
 		\begin{itemize} 
-			\item LLM powered Chinese Language Learning Application (Next.js, React, Python) that generates streamed chinese learning material, pronounciation and translations for the user's exact level based on previously known vocabulary.
-			\item Developed real-time asynchronous LLM request strategy with python asyncio to serve per word and per sentence Chinese to english translations at a reasonable response time (20-30s total response time). 
+			\item Application developed using Next.js and Python that uses OpenAI large language models to generate custom Chinese learning material, pronunciation and translations for the user's exact fluency level based on previously known vocabulary
+			\item Developed custom asynchronous LLM chaining request strategy with Python asyncio to optimise serving of per word and sentence Chinese to English translations (20-30s total response time)
 		\end{itemize}
 	\end{rSection} 
 	
@@ -66,14 +67,7 @@ member of a software engineering book club
 		\begin{itemize} 
 			\scriptsize\item \textit{Volunteering Activities: TEDxUWA Head of Events/ Communications, English for Refugees Tutor, UWA Basketball Club Events Manager, WAUC Charity Consultant} \hfill
 		\end{itemize}
-		\item \textbf{Graduate Diploma of Cyber Security} {Curtin} - GPA: 7.0/7.0 \hfill Discontinued
+		\item \textbf{Graduate Diploma of Cyber Security} {Curtin} - GPA: 7.0/7.0 \hfill (Partially Complete)
 		\item \textbf{Upper Intermediate Mandarin Course} {Taiwan Language Institute}\hfill 
 	\end{rSection} 
-
-	\begin{rSection}{Referrals} 
-		\vspace{-0.8em}
-		\item \textbf{Ujjwal Sharma} {Staff Engineer (Techjnical Lead) - Bankwest} 
-			\hfill 
-			\faIcon[regular]{phone} (+61) 470 396 826
-	\end{rSection}
 \end{document}
