feat: remove docker

--- a/resume.tex
+++ b/resume.tex
@@ -22,7 +22,7 @@
 		\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 			Programming Languages & Java, Python, TypeScript, SQL \\
 			Frameworks/ Libraries &  Angular \& Next.js, Spring Boot, Django, Scikit-learn \\
-            Tools & Git, Octopus Deploy, Docker, TeamCity (CI/CD), Jira, Cursor (AI IDE), Vim (Shortcuts), PostgreSQL \\
+            Tools & Git, Octopus Deploy, TeamCity (CI/CD), Jira, Cursor (AI IDE), Vim (Shortcuts), PostgreSQL \\
 			Certifications & Amazon Associate Developer, Secure Code Warrior - Appsec Champion \\
 			Spoken Languages & English (Native), Mandarin (Conversational), Cantonese (Conversational) \\
             Other Skills & Agile, Scrum, Software Design and Architecture, Microservices, TDD \\ 
